# langgraph-mcp-example

./: .gitignore  LICENSE  README.md  main.py  mcp_servers.json  pyproject.toml  run_llm.py  save_llm.py
app/client/: langgraph_client.py  llm_client.py
app/llm/: dockerfile  entrypoint.sh  save_llm.py
app/mcp_servers/: file_server.py  math_server.py  time_server.py
app/models/: chat_model.py
app/server/: math_server.py  time_server.py
app/services/: agent.py  agent_nodes.py  mcp_client.py
app/utils/: agent_utils.py  mcp_utils.py
app/views/: chat_widget.py  dialog_widget.py  llm_widget.py  mcp_widget.py  sidebar_widget.py
llm/: entrypoint.sh  pyproject.toml
