[project]
name = "langgraph-mcp-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub==0.31.4",
    "langchain-mcp-adapters==0.1.1",
    "langchain-openai==0.3.18",
    "langgraph==0.4.5",
    "mcp==1.9.0",
    "python-dotenv==1.1.0",
]
